--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
     "core-js": "2.5.7",
+    "fstream": "1.0.12",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
