--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/webpack": "4.1.1",
     "ajv": "6.5.4",
     "node-sass": "4.9.4",
+    "randomatic": "3.0.0",
     "rimraf": "2.6.2",
     "gulp": "4.0.0",
     "gulp-cssimport": "6.0.0",
