--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "ontimize-web-ngx": "4.0.0",
-    "ontimize-web-ngx-library-tools": "4.0.1",
+    "ontimize-web-ngx-library-tools": "4.0.2",
     "@angular/flex-layout": "6.0.0-beta.18",
     "@angular/material": "6.4.7",
     "@angular/material-moment-adapter": "6.4.7",
@@ -77,6 +77,7 @@
     "gulp-replace": "0.6.1",
     "copyfiles": "1.2.0",
     "webpack": "4.21.0",
-    "braces": "2.3.1"
+    "braces": "2.3.1",
+    "lodash.template": ">=4.5.0"
   }
 }
