--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "gulp-replace": "0.6.1",
     "copyfiles": "1.2.0",
     "webpack": "4.21.0",
-    "braces": "2.3.1"
+    "braces": "2.3.1",
+    "lodash.template": ">=4.5.0"
   }
 }
