--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "copyfiles": "1.2.0",
     "webpack": "4.21.0",
     "braces": "2.3.1",
-    "lodash.template": ">=4.5.0"
+    "lodash.template": ">=4.5.0",
+    "serialize-javascript": ">=2.1.1"
   }
 }
